--- a/pokedexL.html
+++ b/pokedexL.html
@@ -68,7 +68,7 @@
                             </div>
                         </div>
                         
-                        <p>Movimiento</p><label class="movs" id="movs" for="">E3</label>
+                        <p>Movimiento</p><label class="movs" id="movs" for="">Movimiento</label>
                     </div>
                 </form>
             </div>
