--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         </div>
         <div class="details-page">
             <div class="title">
-                <h1>Pokedex LaunchX</h1>
+                <h2>Pokedex LaunchX</h2>
+                <h3 id="pokeNameL">Pokemon</h3>
             </div>
             <div class="stats">
                 <form action="">
@@ -84,8 +85,10 @@
                                 <label id="s5" class="item-score">0%</label>
                             </div>
                         </div>
-                        
-                        <p>Movimiento</p><label class="movs" id="movs" for="">Movimiento</label>
+                        <div class="movimientos">
+                            <p class="movs">Movimiento</p>
+                            <label class="l-movs" id="movs" >Movimiento</label>
+                        </div>
                     </div>
                 </form>
             </div>
